--- a/WebContent/adminAddMeteorologicalControl.zul
+++ b/WebContent/adminAddMeteorologicalControl.zul
@@ -4,7 +4,7 @@
 <?link rel="icon" tye="image/x-icon" href="/images/favicon.ico"?>
 <?init class="com.alodiga.services.provider.web.security.InitiatorLoggedUser" ?>
 <zk xmlns:n="native">
-    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.AdminEgressMeterologicalControlController" class="general-window" >
+    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.AdminAddMeterologicalControlController" class="general-window" >
         <style src="/css/general.css"/>
         <borderlayout width="100%" height="100%" class="content-transparent">
             <north border="none" size="52px" class="content-transparent">
@@ -26,9 +26,9 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton label="${c:l('sp.crud.product.list')}" onClick='Executions.sendRedirect(&quot;listProducts.zul&quot;)'/>
+                                                <toolbarbutton label="${c:l('sp.crud.product.meteorological')}" onClick='Executions.sendRedirect(&quot;listMeteorologicalControl.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton id="tbbCurrentAction" />
+                                                <toolbarbutton label="${c:l('sp.common.meteorological.add')}" />
                                             </hlayout>
                                         </div>
                                         <div height="5px" width="100%" style="background:#333;" align="left"></div>
@@ -46,8 +46,8 @@
                                                 <label value="${c:l('sp.common.data.basic')}" sclass="lblbold"/>
                                                 <grid fixedLayout="true">
                                                     <columns>
-                                                        <column label="" width="150px"/>
-                                                        <column label="" width="740px"/>
+                                                        <column label="" width="200px"/>
+                                                        <column label="" width="690px"/>
                                                     </columns>
                                                     <rows>
                                                         
@@ -139,11 +139,11 @@
                                                 <label value="${c:l('sp.common.actions.add')}" sclass="lblbold"/>
                                                 <grid fixedLayout="true">
                                                     <columns>
-                                                        <column label="" width="150px"/>
-                                                        <column label="" width="740px"/>
+                                                        <column label="" width="200px"/>
+                                                        <column label="" width="690px"/>
                                                     </columns>
                                                     <rows>
-                                                        <group label="${c:l('sp.common.stock')}" />
+                                                        <group label="${c:l('sp.common.meteorological')}" />
                                                          <row>
                                                             <label value="${c:l('sp.common.category')}" sclass="lblbold"/>
                                                             <hlayout>
@@ -151,52 +151,95 @@
                                                                 <label value="*" sclass="lblreq" />
                                                             </hlayout>
                                                         </row>
-                                                      <row id="rowCustomer" >
+                                                       <row>
+                                                            <label value="${c:l('sp.common.condition')}" sclass="lblbold"/>
+                                                            <hlayout>
+                                                                <combobox id="cmbCondition" width="190px" mold="rounded" readonly="true"/>
+                                                                <label value="*" sclass="lblreq" />
+                                                            </hlayout>
+                                                        </row>
+                                                        <row>
+                                                            <label value="${c:l('sp.common.provider')}" sclass="lblbold"/>
+                                                            <hlayout>
+                                                                <combobox id="cmbProvider" width="190px" mold="rounded" readonly="true"/>
+                                                                <label value="*" sclass="lblreq" />
+                                                            </hlayout>
+                                                        </row>
+                                                      <row id="rowCustomer" visible="false">
                                                             <label value="${c:l('sp.common.customer')}" sclass="lblbold"/>
                                                             <hlayout>
                                                                 <combobox id="cmbCustomer" width="190px" mold="rounded" readonly="true"/>
                                                                 <label value="*" sclass="lblreq" />
                                                             </hlayout>
                                                         </row>
-                                               		   <row>
-                                                            <label value="${c:l('sp.common.amount')}" sclass="lblbold"/>
+                                                        <row>
+                                                            <label value="${c:l('sp.common.page.invoice')}" sclass="lblbold"/>
                                                             <hlayout>
-                                                               <textbox id="txtAmount"  maxlength="45" width="320px"/>                                 
+                                                               <textbox id="txtInvoice" maxlength="45" width="320px"/>                                 
                                                             </hlayout>
                                                         </row>
                                                          <row>
-                                                            <label value="${c:l('sp.common.work.order')}" sclass="lblbold"/>
+                                                            <label value="${c:l('sp.common.amount')}" sclass="lblbold"/>
                                                             <hlayout>
-                                                               <textbox id="txtWorkOrder"  maxlength="45" width="320px"/>                                 
+                                                                <textbox id="txtAmount" width="320px" maxlength="45" constraint="no empty: ${c:l('error.field.required')}"/>
+                                                                <label value="*" sclass="lblreq" />
                                                             </hlayout>
+                                                        </row>
+                                                        <row>
+                                                            <label value="${c:l('sp.common.quantity')}" sclass="lblbold"/>
+                                                            <hlayout>
+                                                                <intbox id="intQuantity" width="320px" maxlength="45" constraint="no empty: ${c:l('error.field.required')}"/>
+                                                                <label value="*" sclass="lblreq" />
+                                                            </hlayout>
+                                                        </row>
+                                                         <row>
+                                                            <label value="${c:l('sp.common.date.expiration')}" sclass="lblbold"/>
+                                                             <hlayout>
+                                                            <checkbox id="cbxExpiration" checked="true"/>
+                                                            <datebox id="dtxExpiration" width="120px" format="dd-MM-yyyy"/>
+                                                            </hlayout>
+                                                        </row>
+                                                        <row >
+                                                            <label value="${c:l('sp.common.date.cure')}" sclass="lblbold"/>
+                                                             <hlayout>
+                                                            	<checkbox id="cbxCure" checked="true"/>
+                                                            	<datebox id="dtxCure" width="120px" format="dd-MM-yyyy"/>
+                                                             </hlayout>
                                                         </row>
                                                          <row>
                                                             <label value="${c:l('sp.common.observations')}" sclass="lblbold"/>
                                                             <hlayout>
-                                                               <textbox id="txtObservation"  rows="3" maxlength="45" width="320px"/>                                 
+                                                               <textbox id="txtObservation"  rows="4" maxlength="45" width="320px"/>                                 
                                                             </hlayout>
                                                         </row>
-                                                       
-                                                        <row id="rowSerials" >
+                                                        <row>
+                                                        <label value="${c:l('sp.common.select')}" sclass="lblbold"/>
+                                                          <hlayout>
+                                                          <radiogroup id="radiogroup" >
+                                                               <radio id="ra1" label="${c:l('sp.common.lot')}"   />
+                											   <radio id="ra2" label="${c:l('sp.common.serial')}"   />
+                											   <radio id="ra3" label="${c:l('sp.common.any')}"   />
+                                                           </radiogroup> 
+                                                          </hlayout>
+                                                        </row>
+                                                       <row id="rowSerial" visible="false">
+                                                        <label value="${c:l('sp.common.lot')}" sclass="lblbold"/>
+                                                        <textbox id="txtSerial" maxlength="45" width="320px" />
+                                                         </row>
+                                                        <row id="rowSerials" visible="false">
                                                           <label value="${c:l('sp.common.serials')}" sclass="lblbold"/>
-                                            			<!--Record Listbox-->
-			                                            <listbox id="lbxRecords" fixedLayout="true" width="720px" height="200px" >
-
-			                                                <listhead>
-			                                                    <listheader label="${c:l('sp.common.serial')}" width="110px" />
-			                                                    <listheader label="${c:l('sp.common.provider')}" width="150px" />
-			                                                    <listheader label="${c:l('sp.common.condition')}" width="90px" />
-			                                                    <listheader label="${c:l('sp.common.date.expiration')}"  width="150px" />
-			                                                    <listheader label="${c:l('sp.common.stock')}" width="90px" />
-			                                                    <listheader label="${c:l('sp.common.quantity')}" width="120px" />
-			                                                </listhead>
-			                                              			                                            </listbox>
+                                     				    	<grid fixedLayout="true" id="gridSerials" height="200px" width="330px">
+															<columns >
+																<column width="300px" label="${c:l('sp.common.serial')}" />
+															</columns>
+															 <rows id="rows">
+																										       
+															 </rows> 													            
+													     </grid>
 		                                                 </row>
-                                                                                                  
+                                                                                                   
                                                     </rows>
                                                 </grid>
-                                                
-                                           
                                                
                                             </vlayout>
                                         </div>
