--- a/WebContent/adminEgressMeteorologicalControl.zul
+++ b/WebContent/adminEgressMeteorologicalControl.zul
@@ -4,7 +4,7 @@
 <?link rel="icon" tye="image/x-icon" href="/images/favicon.ico"?>
 <?init class="com.alodiga.services.provider.web.security.InitiatorLoggedUser" ?>
 <zk xmlns:n="native">
-    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.ViewMeterologicalControlController" class="general-window" >
+    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.AdminEgressMeterologicalControlController" class="general-window" >
         <style src="/css/general.css"/>
         <borderlayout width="100%" height="100%" class="content-transparent">
             <north border="none" size="52px" class="content-transparent">
@@ -26,11 +26,9 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                 <toolbarbutton label="${c:l('sp.crud.product.list.stock')}" />
+                                                <toolbarbutton label="${c:l('sp.crud.product.meteorological')}" onClick='Executions.sendRedirect(&quot;listMeteorologicalControl.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton id ="viewDetail" label="${c:l('sp.crud.product.detail.stock')}" />
-                                                  |
-                                                <toolbarbutton  label="${c:l('sp.common.stock.edit')}" />
+                                                <toolbarbutton label="${c:l('sp.common.meteorological.egress')}" />
                                             </hlayout>
                                         </div>
                                         <div height="5px" width="100%" style="background:#333;" align="left"></div>
@@ -48,8 +46,8 @@
                                                 <label value="${c:l('sp.common.data.basic')}" sclass="lblbold"/>
                                                 <grid fixedLayout="true">
                                                     <columns>
-                                                        <column label="" width="200px"/>
-                                                        <column label="" width="690px"/>
+                                                        <column label="" width="150px"/>
+                                                        <column label="" width="740px"/>
                                                     </columns>
                                                     <rows>
                                                         
@@ -138,14 +136,14 @@
                                                 </grid>
                                         
                                                 
-                                                <label value="${c:l('sp.common.actions.add')}" sclass="lblbold"/>
+                                                <label value="${c:l('sp.common.actions.egress')}" sclass="lblbold"/>
                                                 <grid fixedLayout="true">
                                                     <columns>
-                                                        <column label="" width="200px"/>
-                                                        <column label="" width="690px"/>
+                                                        <column label="" width="150px"/>
+                                                        <column label="" width="740px"/>
                                                     </columns>
                                                     <rows>
-                                                        <group label="${c:l('sp.common.stock')}" />
+                                                        <group label="${c:l('sp.common.meteorological')}" />
                                                          <row>
                                                             <label value="${c:l('sp.common.category')}" sclass="lblbold"/>
                                                             <hlayout>
@@ -153,67 +151,58 @@
                                                                 <label value="*" sclass="lblreq" />
                                                             </hlayout>
                                                         </row>
-                                                       <row>
-                                                            <label value="${c:l('sp.common.condition')}" sclass="lblbold"/>
+                                                        <row>
+                                                            <label value="${c:l('sp.common.departure.date')}" sclass="lblbold"/>
+                                                             <hlayout>
+                                                             <datebox id="dtxExit" width="120px" format="dd-MM-yyyy"/>
+                                                            </hlayout>
+                                                        </row>
+                                                      <row id="rowCustomer" >
+                                                            <label value="${c:l('sp.common.customer')}" sclass="lblbold"/>
                                                             <hlayout>
-                                                                <combobox id="cmbCondition" width="190px" mold="rounded" readonly="true"/>
+                                                                <combobox id="cmbCustomer" width="190px" mold="rounded" readonly="true"/>
                                                                 <label value="*" sclass="lblreq" />
                                                             </hlayout>
                                                         </row>
-                                                        <row>
-                                                            <label value="${c:l('sp.common.provider')}" sclass="lblbold"/>
-                                                            <hlayout>
-                                                                <combobox id="cmbProvider" width="190px" mold="rounded" readonly="true"/>
-                                                                <label value="*" sclass="lblreq" />
-                                                            </hlayout>
-                                                        </row>
-                                                        <row>
-                                                            <label value="${c:l('sp.common.page.invoice')}" sclass="lblbold"/>
-                                                            <hlayout>
-                                                               <textbox id="txtInvoice" maxlength="45" width="320px"/>                                 
-                                                            </hlayout>
-                                                        </row>
-                                                         <row>
+                                               		   <row>
                                                             <label value="${c:l('sp.common.amount')}" sclass="lblbold"/>
                                                             <hlayout>
-                                                                <textbox id="txtAmount" width="320px" maxlength="45" constraint="no empty: ${c:l('error.field.required')}"/>
-                                                                <label value="*" sclass="lblreq" />
-                                                            </hlayout>
-                                                        </row>
-                                                        <row>
-                                                            <label value="${c:l('sp.common.quantity')}" sclass="lblbold"/>
-                                                            <hlayout>
-                                                                <intbox id="intQuantity" width="320px" maxlength="45" constraint="no empty: ${c:l('error.field.required')}"/>
-                                                                <label value="*" sclass="lblreq" />
+                                                               <textbox id="txtAmount"  maxlength="45" width="320px"/>                                 
                                                             </hlayout>
                                                         </row>
                                                          <row>
-                                                            <label value="${c:l('sp.common.date.expiration')}" sclass="lblbold"/>
-                                                             <hlayout>
-                                                            <checkbox id="cbxExpiration" checked="true"/>
-                                                            <datebox id="dtxExpiration" width="120px" format="dd-MM-yyyy"/>
+                                                            <label value="${c:l('sp.common.work.order')}" sclass="lblbold"/>
+                                                            <hlayout>
+                                                               <textbox id="txtWorkOrder"  maxlength="45" width="320px"/>                                 
                                                             </hlayout>
-                                                        </row>
-                                                        <row >
-                                                            <label value="${c:l('sp.common.date.cure')}" sclass="lblbold"/>
-                                                             <hlayout>
-                                                            	<checkbox id="cbxCure" checked="true"/>
-                                                            	<datebox id="dtxCure" width="120px" format="dd-MM-yyyy"/>
-                                                             </hlayout>
                                                         </row>
                                                          <row>
                                                             <label value="${c:l('sp.common.observations')}" sclass="lblbold"/>
                                                             <hlayout>
-                                                               <textbox id="txtObservation"  rows="4" maxlength="45" width="320px"/>                                 
+                                                               <textbox id="txtObservation"  rows="3" maxlength="45" width="320px"/>                                 
                                                             </hlayout>
                                                         </row>
+                                                       
+                                                        <row id="rowSerials" >
+                                                          <label value="${c:l('sp.common.serials')}" sclass="lblbold"/>
+                                            			<!--Record Listbox-->
+			                                            <listbox id="lbxRecords" fixedLayout="true" width="720px" height="200px" >
 
-                                                       <row id="rowSerial" >
-                                                        <label value="${c:l('sp.common.lot')}" sclass="lblbold"/>
-                                                        <textbox id="txtSerial" maxlength="45" width="320px" />
-                                                         </row>                                
+			                                                <listhead>
+			                                                    <listheader label="${c:l('sp.common.serial')}" width="110px" />
+			                                                    <listheader label="${c:l('sp.common.provider')}" width="150px" />
+			                                                    <listheader label="${c:l('sp.common.condition')}" width="90px" />
+			                                                    <listheader label="${c:l('sp.common.date.expiration')}"  width="150px" />
+			                                                    <listheader label="${c:l('sp.common.stock')}" width="90px" />
+			                                                    <listheader label="${c:l('sp.common.quantity')}" width="120px" />
+			                                                </listhead>
+			                                              			                                            </listbox>
+		                                                 </row>
+                                                                                                  
                                                     </rows>
                                                 </grid>
+                                                
+                                           
                                                
                                             </vlayout>
                                         </div>
