--- a/WebContent/adminEgressStock.zul
+++ b/WebContent/adminEgressStock.zul
@@ -26,9 +26,9 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton label="${c:l('sp.crud.product.list')}" onClick='Executions.sendRedirect(&quot;listProducts.zul&quot;)'/>
+                                                <toolbarbutton label="${c:l('sp.crud.product.list.stock')}" onClick='Executions.sendRedirect(&quot;listStock.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton id="tbbCurrentAction" />
+                                                <toolbarbutton label="${c:l('sp.common.stock.egress')}" />
                                             </hlayout>
                                         </div>
                                         <div height="5px" width="100%" style="background:#333;" align="left"></div>
@@ -136,7 +136,7 @@
                                                 </grid>
                                         
                                                 
-                                                <label value="${c:l('sp.common.actions.add')}" sclass="lblbold"/>
+                                                <label value="${c:l('sp.common.actions.egress')}" sclass="lblbold"/>
                                                 <grid fixedLayout="true">
                                                     <columns>
                                                         <column label="" width="150px"/>
@@ -149,6 +149,12 @@
                                                             <hlayout>
                                                                 <combobox id="cmbCategory" width="190px" mold="rounded" readonly="true"/>
                                                                 <label value="*" sclass="lblreq" />
+                                                            </hlayout>
+                                                        </row>
+                                                        <row>
+                                                            <label value="${c:l('sp.common.departure.date')}" sclass="lblbold"/>
+                                                             <hlayout>
+                                                             <datebox id="dtxExit" width="120px" format="dd-MM-yyyy"/>
                                                             </hlayout>
                                                         </row>
                                                       <row id="rowCustomer" >
