--- a/WebContent/listAddStock.zul
+++ b/WebContent/listAddStock.zul
@@ -26,7 +26,7 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                 <toolbarbutton label="${c:l('sp.crud.product.list.stock')}" />
+                                                 <toolbarbutton label="${c:l('sp.crud.product.list.stock')}" onClick='Executions.sendRedirect(&quot;listStock.zul&quot;)'/>
                                                  |
                                                 <toolbarbutton label="${c:l('sp.crud.product.detail.stock')}" />
                                             </hlayout>
