--- a/WebContent/listAddTransit.zul
+++ b/WebContent/listAddTransit.zul
@@ -26,9 +26,9 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                 <toolbarbutton label="${c:l('sp.crud.product.list.stock')}" />
+                                                 <toolbarbutton label="${c:l('sp.crud.product.list.transit')}" />
                                                  |
-                                                <toolbarbutton label="${c:l('sp.crud.product.detail.stock')}" />
+                                                <toolbarbutton label="${c:l('sp.crud.product.detail.transit')}" />
                                             </hlayout>
                                         </div>
                                         <div height="5px" width="100%" style="background:#333;" align="left"></div>
