--- a/WebContent/listTransit.zul
+++ b/WebContent/listTransit.zul
@@ -26,7 +26,7 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton label="${c:l('sp.crud.product.list.stock')}" />
+                                                <toolbarbutton label="${c:l('sp.crud.product.list.transit')}" />
                                             </hlayout>
                                         </div>
                                         <div height="5px" width="100%" style="background:#333;" align="left"></div>
@@ -54,15 +54,15 @@
                                             <!--Record Listbox-->
                                             <listbox id="lbxRecords" fixedLayout="true" width="895px" height="530px">
                                                 <listhead>
-                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="125px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.descripton')}" width="225px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.ubicationBox')}" width="120px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.ubicationFolder')}" width="125px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.amount')}" width="85px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.stock')}" width="85px" sort="auto"/>
-                                                    <listheader label="-" width="45px"/>
-                                                    <listheader label="-" width="45px"/>
-                                                    <listheader label="-" width="45px"/>
+                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="125px" sort="auto" align="center"/>
+                                                    <listheader label="${c:l('sp.common.descripton')}" width="225px" sort="auto" align="center"/>
+                                                    <listheader label="${c:l('sp.common.ubicationBox')}" width="120px" sort="auto" align="center"/>
+                                                    <listheader label="${c:l('sp.common.ubicationFolder')}" width="125px" sort="auto" align="center"/>
+                                                    <listheader label="${c:l('sp.common.amount')}" width="85px" sort="auto" align="center"/>
+                                                    <listheader label="${c:l('sp.common.stock')}" width="85px" sort="auto" align="center"/>
+                                                    <listheader label="-" width="45px" align="center"/>
+                                                    <listheader label="-" width="45px" align="center"/>
+                                                    <listheader label="-" width="45px" align="center"/>
                                                     
                                                 </listhead>
                                             </listbox>
