--- a/WebContent/adminEgressQuarantine.zul
+++ b/WebContent/adminEgressQuarantine.zul
@@ -176,6 +176,12 @@
                                                                <textbox id="txtWorkOrder"  maxlength="45" width="320px"/>                                 
                                                             </hlayout>
                                                         </row>
+                                                        <row>
+                                                            <label value="${c:l('sp.common.quaratine.reason')}" sclass="lblbold"/>
+                                                            <hlayout>
+                                                               <textbox id="txtQuarantine"  rows="4" maxlength="45" width="320px"/>                                 
+                                                            </hlayout>
+                                                        </row>
                                                          <row>
                                                             <label value="${c:l('sp.common.observations')}" sclass="lblbold"/>
                                                             <hlayout>
