--- a/WebContent/adminEgressInitQuarantine.zul
+++ b/WebContent/adminEgressInitQuarantine.zul
@@ -4,7 +4,7 @@
 <?link rel="icon" tye="image/x-icon" href="/images/favicon.ico"?>
 <?init class="com.alodiga.services.provider.web.security.InitiatorLoggedUser" ?>
 <zk xmlns:n="native">
-    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.AdminEgressWaitController" class="general-window" >
+    <window width="100%" height="100%" apply="com.alodiga.services.provider.web.controllers.AdminEgressUnitQuarantineController" class="general-window" >
         <style src="/css/general.css"/>
         <borderlayout width="100%" height="100%" class="content-transparent">
             <north border="none" size="52px" class="content-transparent">
@@ -26,9 +26,9 @@
                                             <hlayout>
                                                 <toolbarbutton label="${c:l('sp.bread.crumb.home')}" onClick='Executions.sendRedirect(&quot;home-admin.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton label="${c:l('sp.crud.product.list.wait')}" onClick='Executions.sendRedirect(&quot;listWait.zul&quot;)'/>
+                                                <toolbarbutton label="${c:l('sp.crud.product.list.quarantine')}" onClick='Executions.sendRedirect(&quot;listQuarantine.zul&quot;)'/>
                                                  |
-                                                <toolbarbutton label="${c:l('sp.common.wait.egress')}" />
+                                                <toolbarbutton label="${c:l('sp.common.quarantine.egress')}" />
                                             </hlayout>
                                         </div>
                                         <div height="5px" width="100%" style="background:#333;" align="left"></div>
@@ -143,7 +143,7 @@
                                                         <column label="" width="740px"/>
                                                     </columns>
                                                     <rows>
-                                                        <group label="${c:l('sp.common.wait')}" />
+                                                        <group label="${c:l('sp.common.quarantine')}" />
                                                          <row>
                                                             <label value="${c:l('sp.common.category')}" sclass="lblbold"/>
                                                             <hlayout>
@@ -176,10 +176,10 @@
                                                                <textbox id="txtWorkOrder"  maxlength="45" width="320px"/>                                 
                                                             </hlayout>
                                                         </row>
-                                                         <row>
-                                                            <label value="${c:l('sp.common.work.to.do')}" sclass="lblbold"/>
+                                                        <row>
+                                                            <label value="${c:l('sp.common.quaratine.reason')}" sclass="lblbold"/>
                                                             <hlayout>
-                                                               <textbox id="txtWork"  rows="4" maxlength="45" width="320px"/>                                 
+                                                               <textbox id="txtQuarantine"  rows="4" maxlength="45" width="320px"/>                                 
                                                             </hlayout>
                                                         </row>
                                                          <row>
